fix(style): Make Vanta.js background visible

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -3,6 +3,7 @@
    ========================================================================== */
 
 #main {
+  background: transparent;
   @include container;
   @include clearfix;
   margin-top: 2em;
